new bubble screensaver

--- a/css/main.css
+++ b/css/main.css
@@ -35,14 +35,6 @@ footer {
   padding-top: 3%;
 }
 
-.opening-content {
-  text-align: center;
-  color: white;
-  padding-top: 15%;
-  width: 60%;
-  margin: 0 auto;
-}
-
 .content {
   text-align: center;
   padding-top: 15%;
@@ -71,7 +63,7 @@ footer {
   padding-left: 5%;
 }
 
-#circle1, #circle2, #circle4, #circle7, #circle10 {
+#circle1, #circle2 {
   position: absolute;
   width: 200px;
   height: 200px;
@@ -84,12 +76,11 @@ footer {
   transition:.2s;
 }
 
-#circle1:hover, #circle2:hover, #circle3:hover, #circle4:hover, #circle5:hover, #circle6:hover,
-#circle7:hover, #circle8:hover, #circle9:hover, #circle10:hover, #circle11:hover {
+#circle1:hover, #circle2:hover, #circle3:hover {
   border: solid white 2px;
 }
 
-#circle3, #circle5, #circle6, #circle8, #circle9, #circle11 {
+#circle3 {
   position: absolute;
   width: 300px;
   height: 300px;
