--- a/main.css
+++ b/main.css
@@ -8,11 +8,13 @@ body {
 #opener {
   color: white;
   height: 85vh;
+  background-size: contain;
   background-image: url("assets/hero-img.jpg");
+  padding-top: 60px;
 }
 
 #team, #about {
-  height: 80vh;
+  height: 70vh;
 }
 
 #end-footer {
@@ -24,14 +26,20 @@ body {
   background-color: #ec474d;
   color: white;
   padding: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: inline-block;
+  margin-top: 20px;
   font-size: 16px;
   border-radius: 5px;
 }
 
 .join {
-  border: 2px solid white;
+  border: 1px solid white;
   margin-right: 10px !important;
   padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   color: white;
   border-radius: 5px;
   -webkit-transition: 0.3s;
@@ -92,6 +100,10 @@ body {
   background-image: url("assets/o.jpeg");
 }
 
+#social-footer {
+  float: right;
+}
+
 .stripe {
   z-index: -1;
   height: 10vh;
@@ -122,6 +134,11 @@ p, a {
   font-family: "Open Sans", sans-serif;
 }
 
+p {
+  font-size: 18px !important;
+  line-height: 1.6;
+}
+
 a {
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -137,6 +154,14 @@ a:active {
 a:visited {
   color: white;
   text-decoration: none !important;
+}
+
+.top-link {
+  margin-left: 25px;
+}
+
+#top-links-structure {
+  margin-top: 15px;
 }
 
 .about-pic {
@@ -178,6 +203,7 @@ a:visited {
   background-color: #ec474d;
   border: none;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 a:hover {
@@ -207,17 +233,36 @@ a:hover {
   border: white;
 }
 
+.socials {
+  width: 33px;
+}
+
 @media only screen and (max-width: 600px) {
+
     p {
         font-size: 12px !important;
     }
 
+    #opener {
+      background-size: cover;
+    }
+
     #team {
-      height: 200vh;
+      height: 175vh;
     }
 
     #action {
       font-size: 10px;
       padding: 15px;
+    }
+
+    #social-footer {
+      float: none;
+      text-align: center;
+    }
+
+    .about-div {
+      padding-top: 20px;
+      padding-bottom: 35px;
     }
 }
