--- a/main.css
+++ b/main.css
@@ -22,20 +22,8 @@ body {
   color: white;
 }
 
-#action {
-  border: 2px solid #ec474d;
+#open-popup1 {
   background-color: #ec474d;
-  color: white;
-  padding: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
-  display: inline-block;
-  margin-top: 20px;
-  font-size: 16px;
-  border-radius: 5px;
-}
-
-.join {
   border: 1px solid white;
   margin-right: 10px !important;
   padding: 10px;
@@ -49,7 +37,24 @@ body {
   transition: 0.3s;
 }
 
-.join:hover {
+#open-popup2 {
+  border: 2px solid #ec474d;
+  background-color: #ec474d;
+  color: white;
+  padding: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+#open-popup1:hover, #open-popup2:hover {
   background-color: white;
   color: #ec474d;
 }
