--- a/main.css
+++ b/main.css
@@ -196,7 +196,7 @@ p, a, button, h4, h5, ul, li {
   font-family: "Open Sans", sans-serif;
 }
 
-p {
+p, ul{
   font-size: 16px !important;
   line-height: 1.6;
 }
