--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body {
 
 #opener {
   color: white;
-  height: 85vh;
+  height: 70vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("assets/hero-img.jpg");
@@ -33,7 +33,7 @@ body {
 }
 
 #team {
-  height: 70vh;
+  height: 75vh;
 }
 
 #end-footer {
@@ -80,7 +80,7 @@ body {
 #email-bar {
   color: grey;
   width: 50%;
-  padding: 10px;
+  padding: 15px;
 }
 
 #mc_embed_signup {
@@ -120,7 +120,7 @@ body {
 }
 
 #logo {
-  width: 320px;
+  width: 250px;
   margin-right: ($spacer * .50) !important;
 }
 
@@ -159,7 +159,7 @@ h1, label {
 }
 
 h1 {
-  font-size: 53px !important;
+  font-size: 40px !important;
 }
 
 h2, h3 {
@@ -268,6 +268,10 @@ a:visited {
   padding-bottom: 5px;
 }
 
+.faq {
+  line-height: 1.7;
+}
+
 a:hover {
   color: #dcdcdc;
   text-decoration: none;
@@ -311,7 +315,7 @@ a:hover {
     }
 
     #team {
-      height: 175vh;
+      height: 180vh;
     }
 
     #action {
@@ -354,7 +358,7 @@ a:hover {
 
     #opener {
       background-size: cover;
-      height: 60vh;
+      height: 70vh;
     }
 
     #about {
@@ -362,7 +366,7 @@ a:hover {
     }
 
     #team {
-      height: 180vh;
+      height: 193vh;
     }
 
     #social-footer {
@@ -382,8 +386,12 @@ a:hover {
 
 @media only screen and (min-width: 481px) and (max-width: 1000px) {
 
+  #about {
+    height: 95vh;
+  }
+
   #team {
-    height: 180vh !important;
+    height: 195vh !important;
   }
 
   .about-div {
