--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@ body {
   background: #ec474d;
 }
 
+}
+
 @font-face {
   font-family: CircularStd-Black;
   src: url("fonts/CircularStd-Black.otf");
@@ -29,7 +31,7 @@ body {
 }
 
 #about {
-  height: 55vh;
+  height: 75vh;
 }
 
 #team {
@@ -273,7 +275,7 @@ a:visited {
 }
 
 a:hover {
-  color: #dcdcdc;
+  color: #000000;
   text-decoration: none;
 }
 
